code top header

--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- add favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="./accsets/favicon/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="./accsets/favicon/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="./accsets/favicon/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="./accsets/favicon/apple-icon-76x76.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="./accsets/favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./accsets/favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./accsets/favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./accsets/favicon/apple-icon-76x76.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
@@ -40,12 +56,30 @@
       sizes="192x192"
       href="./accsets/favicon/android-icon-192x192.png"
     />
-    <link rel="icon" type="image/png" sizes="32x32" href="./accsets/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="./accsets/favicon/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./accsets/favicon/favicon-16x16.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./accsets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./accsets/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./accsets/favicon/favicon-16x16.png"
+    />
     <link rel="manifest" href="./accsets/favicon/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="./accsets/favicon/ms-icon-144x144.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="./accsets/favicon/ms-icon-144x144.png"
+    />
     <meta name="theme-color" content="#ffffff" />
 
     <link rel="stylesheet" href="./accsets/css/reset.css" />
@@ -58,5 +92,38 @@
     />
     <title>shine smile</title>
   </head>
-  <body></body>
+  <body style="height: 50000px">
+    <header class="header">
+      <div class="container">
+        <div class="header-top">
+          <!-- logo -->
+          <a href="./"
+            ><img src="./accsets/img/logo.svg" alt="shine smile" class="logo"
+          /></a>
+          <!-- nav -->
+          <nav class="navbar">
+            <ul class="navbar__list">
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link navbar__link--active">Home</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Services</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">About</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Doctors</a>
+              </li>
+            </ul>
+          </nav>
+          <!-- cta action -->
+          <div class="header__action">
+            <a href="#!" class="header__action--login">Log In</a>
+            <a href="#!" class="btn header__action--signup">Sign Up</a>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
