--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sora:wght@100..800&display=swap"
       rel="stylesheet"
     />
+
+    <!-- responsive -->
+    <link rel="stylesheet" href="./accsets/css/respossive.css" />
     <title>shine smile</title>
   </head>
   <body>
@@ -99,7 +102,10 @@
         <div class="header-top">
           <!-- logo -->
           <a href="./"
-            ><img src="./accsets/img/logo.svg" alt="shine smile" class="logo"
+            ><img
+              src="./accsets/img/logo.svg"
+              alt="shine smile"
+              class="logo header__logo"
           /></a>
           <!-- nav -->
           <nav class="navbar">
@@ -157,6 +163,33 @@
         </section>
       </div>
     </header>
+
+    <!-- tablet/mobile header -->
+    <div class="mobile-header">
+      <!-- tablet/mobile menu -->
+      <input
+        type="checkbox"
+        name="menu-checkbox"
+        id="menu-checkbox"
+        class="menu-checkbox"
+        hidden
+      />
+      <label for="menu-checkbox">
+        <svg
+          class="menu-header__icon"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <path
+            fill="currentcolor"
+            d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"
+          />
+        </svg>
+      </label>
+
+      <!-- overplay -->
+       <label for="menu-checkbox" class="menu-overplay"></label>
+    </div>
 
     <!-- main -->
     <main>
