--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           /></a>
           <!-- nav -->
           <nav class="navbar">
-            <ul class="navbar__list">
+            <ul class="navbar__list" id="navbar__list--pc">
               <li class="navbar__item">
                 <a href="#!" class="navbar__link navbar__link--active">Home</a>
               </li>
@@ -188,7 +188,39 @@
       </label>
 
       <!-- overplay -->
-       <label for="menu-checkbox" class="menu-overplay"></label>
+      <label for="menu-checkbox" class="menu-overplay"></label>
+
+      <!-- menu content -->
+      <div class="menu-drawer">
+        <!-- menu top -->
+        <div class="menu-drawer__top">
+          <!-- logo -->
+          <a href="./"
+            ><img src="./accsets/img/logo.svg" alt="shine smile" class="logo"
+          /></a>
+          <!-- icon close menu -->
+          <label for="menu-checkbox">
+            <svg
+              class="close__menu"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 512 512"
+            >
+              <path fill="currentcolor"
+                d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c-9.4 9.4-9.4 24.6 0 33.9l47 47-47 47c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l47-47 47 47c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-47-47 47-47c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-47 47-47-47c-9.4-9.4-24.6-9.4-33.9 0z"
+              />
+            </svg>
+          </label>
+        </div>
+        <!-- nav mobile -->
+        <ul id="navbar__list--mobile"></ul>
+        <!-- Sử dụng js để code navbar -->
+        <script>
+          const navPC = document.querySelector("#navbar__list--pc");
+          const navMobile = document.querySelector("#navbar__list--mobile");
+          //sao chep
+          navMobile.innerHTML = navPC.innerHTML;
+        </script>
+      </div>
     </div>
 
     <!-- main -->
